<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

    <TextView
            android:id="@+id/select_city_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/select_city"
            android:textColor="#fff"
            android:textSize="20sp"/>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true">

        <TextView
                android:id="@+id/weather_calendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/weather_calendar"
                android:textColor="#fff"
                android:textSize="20sp"/>

        <TextView
                android:id="@+id/weather_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weather_setting"
                android:textColor="#fff"
                android:textSize="20sp"/>
    </LinearLayout>


</RelativeLayout>